--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password = galvanize31
 
 # Configure Hibernate DDL mode: create / update
 spring.jpa.properties.hibernate.hbm2ddl.auto = update
+hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # Disable the default loggers
 #logging.level.org = WARN
