--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,14 @@ spring.datasource.username = BarInfo
 spring.datasource.password = galvanize31
 
 # Configure Hibernate DDL mode: create / update
-spring.jpa.properties.hibernate.hbm2ddl.auto = update
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.hbm2ddl.auto = update
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+#hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
 
 # Disable the default loggers
 #logging.level.org = WARN
